<resources>
    <string name="app_name">MyRecipe</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="settings">settings</string>
    <string name="fav_recipe">Favorites recipes</string>
    <string name="categories_name">Categories</string>
    <string name="favorite_note">Favorite note</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">The text of the annotation</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="add_image">Image</string>
    <string name="simple_note_title">Simle note</string>
    <string name="important_note_title">Important note</string>
    <string name="password_note_title">Password note</string>
    <string name="tools">Tools</string>
    <string name="menu">Menu</string>
    <string name="all_note">All</string>
    <string name="note_color">Note color</string>
    <string name="add_to_firestore">Add to cloud storage</string>
    <string name="synchronization">Synchronization</string>
    <string name="upload">upload</string>
    <string name="add_note">Add</string>
    <string name="download">download</string>
    <string name="upload_to_the_cloud">Upload to the cloud</string>
    <string name="authentication">Authentication</string>
    <string name="exit">Exit</string>
    <string name="login">in</string>
    <string name="logout">out</string>

    <string name="logout_dialog_title">Log out of your account?</string>
    <string name="logout_dialog_cancel">Cancel</string>
    <string name="snackbar_delete_note_title">Are You sure?</string>
    <string name="toast_login_about_delete">To delete a note, you need to log in</string>
    <string name="ingredients_title">Ингредиенты</string>
    <string name="cooking_instruction_title">Инструкция приготовления</string>
    <string name="dish_name">Название блюда</string>
    <string name="title_dish_category">Категория блюда</string>
    <string name="recipe_description_title">Инструкция приготовления</string>
    <string name="ingredient_hint">Новый ингредиент</string>
    <string name="add_ingredient_btn_title">Добавить ингредиент</string>


</resources>